[package]
name = "nuke"
authors = ["potassium-shot"]
version = "0.1.0"
edition = "2021"
description = "A program to utterly nuke any file or directory. Leaves no data of the files on the drive, overwrites it with random data."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.5.4", features=["derive"] }
rand = "0.8.5"

